--- a/app/src/main/res/layout/list_auction_item.xml
+++ b/app/src/main/res/layout/list_auction_item.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/_16sdp">
+    android:layout_margin="@dimen/_10sdp"
+    android:elevation="@dimen/_10sdp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,13 +50,18 @@
             android:text="52,000"
             android:textSize="@dimen/_20ssp"/>
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/auctionItemMoreDetailsBtn"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/primary_dark"
+            android:clickable="true"
+            android:padding="@dimen/_10sdp"
+            android:text="BID NOW"
+            app:cornerRadius="@dimen/_5sdp"/>
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:background="@color/divider"/>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
