setting up FCM and saving user record with fcm token in Firestore

--- a/app/src/main/res/layout/fragment_auction_detail.xml
+++ b/app/src/main/res/layout/fragment_auction_detail.xml
@@ -25,7 +25,7 @@
 
             <TextView
                 android:id="@+id/auctionItemDetailTitleTxt"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:textSize="@dimen/_20ssp"
@@ -34,7 +34,7 @@
 
             <TextView
                 android:id="@+id/auctionItemDetailDescTxt"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"/>
 
