--- a/app/src/main/res/layout/fragment_auction_detail.xml
+++ b/app/src/main/res/layout/fragment_auction_detail.xml
@@ -81,6 +81,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/currentHighBidTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2500"
@@ -109,6 +110,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/itemBasePriceTxt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1000"
@@ -186,6 +188,7 @@
         </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/placeBidBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
