--- a/app/src/main/res/layout/fragment_auction_detail.xml
+++ b/app/src/main/res/layout/fragment_auction_detail.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:textSize="@dimen/_20ssp"
+                android:textColor="@color/primary_text"
                 android:layout_marginTop="@dimen/_10sdp"/>
 
 
@@ -36,7 +37,8 @@
                 android:id="@+id/auctionItemDetailDescTxt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"/>
+                android:padding="10dp"
+                android:textColor="@color/primary_text"/>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -55,7 +57,7 @@
                         android:layout_height="wrap_content"
                         android:text="8h"
                         android:textSize="@dimen/_10ssp"
-                        android:textColor="@color/divider"
+                        android:textColor="@color/primary_text"
                         android:layout_gravity="center"/>
 
                     <TextView
@@ -63,7 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Remaining"
-                        android:textColor="@color/divider"
+                        android:textColor="@color/secondary_text"
                         android:layout_gravity="center" />
 
                 </LinearLayout>
@@ -85,14 +87,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2500"
-                        android:textColor="@color/divider"
+                        android:textColor="@color/primary_text"
                         android:layout_gravity="center" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Current Bid"
-                        android:textColor="@color/divider"
+                        android:textColor="@color/secondary_text"
                         android:layout_gravity="center" />
 
                 </LinearLayout>
@@ -114,25 +116,34 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1000"
-                        android:textColor="@color/divider"
+                        android:textColor="@color/primary_text"
                         android:layout_gravity="center"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Base Price"
-                        android:textColor="@color/divider"
+                        android:textColor="@color/secondary_text"
                         android:layout_gravity="center" />
 
                 </LinearLayout>
 
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/currentStatusDescTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/_12ssp"
+                android:textColor="@color/secondary_text"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_20sdp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             android:layout_marginStart="@dimen/_15sdp"
             android:layout_marginEnd="@dimen/_15sdp"
             android:layout_gravity="center"
@@ -158,7 +169,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Rs."
-                    android:textColor="@color/divider"
+                    android:textColor="@color/primary_text"
                     android:layout_gravity="center"
                     android:textSize="@dimen/_20ssp"
                     android:textAlignment="center"/>
@@ -168,7 +179,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="7500"
-                    android:textColor="@color/divider"
+                    android:textColor="@color/primary_text"
                     android:layout_gravity="center"
                     android:textSize="@dimen/_20ssp"
                     android:textAlignment="center"/>
