--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.ramith.ascentic.centicbids.auth.LoginFragment"
+        android:name="com.ramith.ascentic.centicbids.feature.authentication.LoginFragment"
         tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
@@ -23,7 +23,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.ramith.ascentic.centicbids.auth.RegisterFragment"
+        android:name="com.ramith.ascentic.centicbids.feature.authentication.RegisterFragment"
         tools:layout="@layout/fragment_register" >
         <action
             android:id="@+id/action_registerFragment_to_auctionsListFragment"
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/auctionsListFragment"
-        android:name="com.ramith.ascentic.centicbids.auction.AuctionsListFragment"
+        android:name="com.ramith.ascentic.centicbids.feature.auction.AuctionsListFragment"
         tools:layout="@layout/fragment_auctions_list">
         <action
             android:id="@+id/action_auctionsListFragment_to_auctionDetailFragment"
@@ -45,7 +45,7 @@
     </fragment>
     <fragment
         android:id="@+id/auctionDetailFragment"
-        android:name="com.ramith.ascentic.centicbids.auction.AuctionDetailFragment"
+        android:name="com.ramith.ascentic.centicbids.feature.auction.AuctionDetailFragment"
         tools:layout="@layout/fragment_auction_detail" >
         <argument
             android:name="auctionItem"
